fix: spacing

--- a/sourse/pug/blocks/sCards/_sCards.scss
+++ b/sourse/pug/blocks/sCards/_sCards.scss
@@ -1,6 +1,6 @@
 // start .sCards
 .sCards {
-	// --sPT: #{rem()};
+	--sPT: #{rem(60)};
 	// --sPB: #{rem()};
 	// --sTPB: #{rem()};
 	background-color: #fff;
